# naturoestela

./: .gitignore  .pre-commit-config.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_initial_tables.py  002_add_categories_table.py  003_migrate_posts_category_to_fk.py  004_add_tags_tables.py  005_add_images_table.py  006_extend_posts_for_admin.py
backend/naturoestela_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_posts.py
backend/src/: config.py  main.py
backend/src/application/use_cases/: get_post_by_slug.py  get_posts.py  submit_contact.py  subscribe_newsletter.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: category.py  contact_submission.py  image.py  newsletter_subscriber.py  post.py  tag.py
backend/src/domain/repositories/: category_repository.py  contact_repository.py  image_repository.py  newsletter_repository.py  post_repository.py  tag_repository.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/infrastructure/email/: email_service.py  resend_email_service.py
backend/src/infrastructure/repositories/: sqlalchemy_category_repository.py  sqlalchemy_contact_repository.py  sqlalchemy_image_repository.py  sqlalchemy_newsletter_repository.py  sqlalchemy_post_admin_repository.py  sqlalchemy_post_repository.py  sqlalchemy_tag_repository.py
backend/src/infrastructure/storage/: image_storage.py
backend/src/presentation/dependencies/: auth.py
backend/tests/integration/: test_contact.py
(+156 files in other folders)
